# Gnss_Ins

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp  tools.cpp
include/: earth.hpp  fileio.hpp  init.hpp  insmech.hpp  rotation.hpp  types.hpp
src/: fileio.cpp  init.cpp  insmech.cpp
